# iri-rs

./: CHANGELOG.md  Cargo.toml  README.md
iri-rs/: Cargo.toml
iri-rs-core/: Cargo.toml  README.md
iri-rs-core/benches/: accessors.rs  corpus.rs  mutate.rs  normalize.rs  normalize_eq.rs  parse.rs  resolve.rs  validate.rs
iri-rs-core/src/: components.rs  error.rs  lib.rs  mutate.rs  normalize.rs  parse.rs  relativize.rs  resolve.rs  types.rs  utils.rs  validate.rs
iri-rs-core/src/common/: authority.rs  authority_mut.rs  fragment.rs  mod.rs  parse.rs  path.rs  path_mut.rs  query.rs  reference.rs
iri-rs-core/src/iri/: authority.rs  authority_mut.rs  fragment.rs  mod.rs  path.rs  path_mut.rs  query.rs  reference.rs
iri-rs-core/src/iri/authority/: host.rs  userinfo.rs
iri-rs-core/src/iri/path/: segment.rs
iri-rs-core/src/uri/: authority.rs  authority_mut.rs  fragment.rs  mod.rs  path.rs  path_mut.rs  query.rs  reference.rs
iri-rs-core/src/uri/authority/: host.rs  port.rs  userinfo.rs
iri-rs-core/src/uri/path/: segment.rs
iri-rs-core/src/uri/scheme/: data.rs  mod.rs
iri-rs-enum/: Cargo.toml  README.md
iri-rs-enum/examples/: simple.rs
iri-rs-enum/src/: lib.rs
iri-rs-enum/tests/: simple.rs
iri-rs-static/: Cargo.toml  README.md
iri-rs-static/src/: lib.rs
iri-rs-static/tests/: standalone.rs
iri-rs/benches/: accessors.rs  corpus.rs  parse.rs  resolve.rs
iri-rs/examples/: basic.rs  buffer.rs  references.rs  resolution.rs  serde.rs
iri-rs/src/: lib.rs
iri-rs/tests/: macros_via_umbrella.rs
