[workspace]
members = ["iri-rs", "iri-rs-core", "iri-rs-enum", "iri-rs-static"]
resolver = "3"

[workspace.package]
version = "3.3.0"
edition = "2024"
rust-version = "1.85.0"
authors = [
    "Timothée Haudebourg <author@haudebourg.net>",
    "Matej Škvarč <matej.skvarc@senlab.io>",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/mskvarc/iri-rs/"
keywords = ["iri", "uri", "url", "resource", "identifier"]
categories = ["web-programming", "internationalization"]

[workspace.dependencies]
iri-rs-core = { path = "iri-rs-core", version = "3.3.0" }
iri-rs-enum = { path = "iri-rs-enum", version = "3.3.0" }
iri-rs-static = { path = "iri-rs-static", version = "3.3.0" }
