[workspace]
members = ["iri-rs", "iri-rs-core", "iri-rs-enum", "iri-rs-static"]
resolver = "3"

[workspace.package]
version = "3.3.2"
edition = "2024"
rust-version = "1.85.0"
authors = [
    "Timothée Haudebourg <author@haudebourg.net>",
    "Matej Škvarč <matej.skvarc@senlab.io>",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/mskvarc/iri-rs/"
keywords = ["iri", "uri", "url", "rfc3986", "identifier"]
categories = [
    "parser-implementations",
    "web-programming",
    "internationalization",
    "encoding",
]

[workspace.dependencies]
iri-rs-core = { path = "iri-rs-core", version = "3.3.2" }
iri-rs-enum = { path = "iri-rs-enum", version = "3.3.2" }
iri-rs-static = { path = "iri-rs-static", version = "3.3.2" }
