[package]
name = "iri-rs-core"
description = "Uniform & Internationalized Resource Identifiers (URIs/IRIs), borrowed and owned."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
serde = ["dep:serde"]
data = ["dep:base64"]
hashbrown = ["dep:hashbrown"]

[dependencies]
base64 = { version = "0.22.1", optional = true }
hashbrown = { version = "0.14.0", optional = true }
pct-str = "2.0"
serde = { version = "1.0", optional = true }
smallvec = "1.2"
static-regular-grammar = "2.0.2"
thiserror = "1.0.40"
