[package]
name = "iri-rs-core"
description = "Uniform & Internationalized Resource Identifiers (URIs/IRIs), borrowed and owned."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
serde = ["dep:serde"]
data = ["dep:base64"]

[dependencies]
base64 = { version = "0.22.1", optional = true }
pct-str = "2.0"
serde = { version = "1.0", optional = true }
smallvec = "1.2"
static-regular-grammar = "2.0.2"
thiserror = "1.0.40"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "accessors"
harness = false

[[bench]]
name = "resolve"
harness = false

[[bench]]
name = "normalize"
harness = false

[[bench]]
name = "mutate"
harness = false
