[package]
name = "iri-rs-core"
description = "Uniform & Internationalized Resource Identifiers (URIs/IRIs), borrowed and owned."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
serde = ["dep:serde"]
data = ["dep:base64"]
fast-hash = []

[dependencies]
base64 = { version = "0.22.1", optional = true }
memchr = "2.8.0"
pct-str = "3.0.1"
serde = { version = "1.0", optional = true }
simdutf8 = "0.1.5"
smallvec = "1.15.1"
thiserror = "2.0.18"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "accessors"
harness = false

[[bench]]
name = "resolve"
harness = false

[[bench]]
name = "normalize"
harness = false

[[bench]]
name = "mutate"
harness = false

[[bench]]
name = "normalize_eq"
harness = false

[[bench]]
name = "validate"
harness = false

