[package]
name = "iri-rs-enum"
description = "Derive macro for IRI-like enum types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
iri-rs-core.workspace = true
proc-macro-crate = "3.5.0"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full"] }

[dev-dependencies]
iri-rs-core.workspace = true
iri-rs-static.workspace = true
