[package]
name = "iri-rs-static"
description = "Compile-time IRI and URI literal macros for iri-rs. Validate at macro expansion and emit const expressions with pre-computed component positions."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
keywords = ["iri", "uri", "macro", "const", "compile-time"]
categories = ["web-programming", "internationalization", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
iri-rs-core.workspace = true
proc-macro-crate = "3.5.0"
proc-macro2 = "1.0.95"
quote = "1.0.45"
syn = "2.0.117"

[dev-dependencies]
iri-rs-core.workspace = true
