[package]
name = "iri-rs"
description = "Uniform & Internationalized Resource Identifiers (URIs/IRIs), borrowed and owned."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = []
static = ["dep:iri-rs-static"]
serde = ["iri-rs-core/serde"]
data = ["iri-rs-core/data"]
hashbrown = ["iri-rs-core/hashbrown"]

[dependencies]
iri-rs-core.workspace = true
iri-rs-static = { workspace = true, optional = true }

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[[example]]
name = "serde"
required-features = ["serde"]
