[package]
name = "iri-rs"
description = "Uniform & Internationalized Resource Identifiers (URIs/IRIs), borrowed and owned."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = []
static = ["dep:iri-rs-static"]
serde = ["iri-rs-core/serde"]
data = ["iri-rs-core/data"]

[dependencies]
iri-rs-core.workspace = true
iri-rs-static = { workspace = true, optional = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[[example]]
name = "serde"
required-features = ["serde"]

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "accessors"
harness = false

[[bench]]
name = "resolve"
harness = false

